--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -12,6 +12,17 @@
   font-size: 1.2em;
 }
 
+.btn-more{
+  margin: 1.5em 0;
+  padding:  .5em 1em;
+  height: 35px;
+  border:0;
+  border-radius: 5px;
+  background-color: #181c2e;
+  color: #FFF;
+  font-size: 1.1em;
+}
+
 .new{
   float:right;
   margin-bottom: 1.5em;
